--- a/styles/style.css
+++ b/styles/style.css
@@ -36,3 +36,43 @@ ul,
 ol {
   list-style: none;
 }
+
+.content {
+  display: flex;
+  align-items: flex-end;
+  padding: 133px 30px;
+  gap: 30px;
+  inline-size: 1140px;
+}
+
+.result__video-container {
+  inline-size: 711px;
+  margin-block-end: 16px;
+}
+
+.result__video {
+  inline-size: 100%;
+}
+
+.search-form {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  inline-size: 100%;
+  block-size: 100%;
+
+}
+
+.content__list {
+  block-size: 534px;
+  overflow: auto;
+  gap: 30px;
+
+}
+
