--- a/styles/style.css
+++ b/styles/style.css
@@ -45,13 +45,22 @@ ol {
   inline-size: 1140px;
 }
 
+.result {
+  block-size: 534px;
+  padding-block-start: 78px;
+}
+
 .result__video-container {
   inline-size: 711px;
+  block-size: 386px;
   margin-block-end: 16px;
 }
 
 .result__video {
   inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -64,9 +73,19 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 26px;
-  inline-size: 100%;
-  block-size: 100%;
+  inline-size: 399px;
+  block-size: 534px;
 
+}
+
+.title {
+font-family: 'Oswald';
+font-style: normal;
+font-weight: 700;
+font-size: 75px;
+line-height: 94%;
+text-transform: uppercase;
+color: #545050;
 }
 
 .content__list {
