--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,16 @@ ol {
   list-style: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 .content {
   display: flex;
   align-items: flex-end;
@@ -79,13 +89,16 @@ ol {
 }
 
 .title {
-  color: #545050;
   font-family: 'Oswald';
   font-weight: 700;
   font-size: 75px;
   font-style: normal;
   line-height: 94%;
   text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
 }
 
 .content__list {
@@ -111,4 +124,31 @@ ol {
   object-position: center;
 }
 
+.content__video-card-description-container {
+  flex-grow: 1;
+  block-size: 103px;
+}
 
+.search-form__fieldset-title {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.content__video-card-title{
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  line-height: 16px;
+/* or 90% */
+}
