--- a/styles/style.css
+++ b/styles/style.css
@@ -197,6 +197,29 @@ ol {
 .content__card-link {
   color: #fff;
   text-decoration: none;
+  display: block;
+  margin: 2px;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #FFFFFF;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:active {
+  color: #545050;
+  
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
 
 .content__video-card {
